# CppPracticeProject

./: .gitignore  CMakeLists.txt  README.md
App/: CMakeLists.txt
Core/: CMakeLists.txt
Core/Include/Core/: TypeTraits.hpp
CppPracticeProject/: CMakeLists.txt
CppPracticeProject/Include/: Cpp11TMP.hpp  TMPList.hpp  TypeTraits.hpp
CppPracticeProject/Src/: main.cpp
Functional/: CMakeLists.txt
Functional/Include/: Delegates.hpp
Test/: CMakeLists.txt
Test/Src/: CppPracticeProjectTest.cpp
TypeTraits/: CMakeLists.txt
TypeTraits/Src/: TypeTraitsMain.cpp
